--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
           <p>2. If you enter 1st date you will get result .</p>
           <p> <b>This is Not 2 way search I try to implement but not able to do .</b> </p>
           <p>3.If you will select both date option you will get <b>Return Flight Result</b></p>
-          <p>4.I have aslo not add any css.</p>
+          <p>4.I have aslo not add show much css.</p>
 
           <p>5.I really enjoyed this assignment. </p>
 
